--- a/Contact.html
+++ b/Contact.html
@@ -41,7 +41,7 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="#">E L E N I ' S&nbsp; P O R T F O L I O</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index.html">E L E N I ' S&nbsp; P O R T F O L I O</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -73,7 +73,7 @@
         <div class="row">
             <div class="col-lg-10 mx-auto mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="LAD61j8MPeyk1zxmOh4eEXJFh8pioQdidKss/BAgKpopGdvSK8L2cTMpsAyA+cc4QZJ44YBFT1jSa+A/e2/FPQI+3OTPshA4+/Txabhlag7AK6G1G0S8ZJKcEh2SRzqp.NNp62cQs/hnkfb1xXTxiYU8l0RjxR7BbK8+pIchrDgZxJox+JTlS75WvNDg2DKI5h8ITLbFhoEG5sb5ftwocznPNxJhgLuzokpRbxnO9j69B4m4v88dntbI2quzWh66Q">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QbtdGtmKEFALfAFOnT9Xy5YjOa3zU5RavLcOCX+Pw+5z1SPyL9zlXgshk5zJo7l6yx5K07iGUiiIc4LV28GiJO5WsvAapzoMaagItB5pjN8FP+GX20E0v+DcOH4LCZW5.Nnv4jWnbXfdrxXJz0veSD2oR0fAWL/x7eRxk/n0VykBMI7/PfpR6S+4M/feR8vk+Tfa++8ZWv7O4Bx6KAv81zO79tnaeUYjqVStlwCpT0Le3jsGV2iBLwek92JJUU6OY">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for reaching out! I will get back to you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
