--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/eleni-logo-design-2021.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -40,7 +40,11 @@
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-brand">
-                
+                <span class="navbar-logo">
+                    <a href="#">
+                        <img src="assets/images/eleni-logo-design-2021.png" alt="" style="height: 3rem;">
+                    </a>
+                </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="index.html">E L E N I ' S&nbsp; P O R T F O L I O</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,7 +77,7 @@
         <div class="row">
             <div class="col-lg-10 mx-auto mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="G/x7mZL+4lTriZgptGuS/G8oCm/kJR1pq/vF+5W6RcB9cp4PlofYowqusQzYp9SbqLxHD9Su00C90KFLliKW9VjRY7XCWk5QeUESqQL3A78HzA9Ov6dB+WNbeNI3TiPE.jr0I0wr2Jy5mkCZ9gBLRv+KQ9HbbeUosvtB8glzfYcXcWoA2AiaUU20AOdBdv09qeTGlxhIKMs0iifwARjSj4gnJxodgsLyLIOHwtRvpqXkYyXg3ljk0AAxlIoOdFHvm">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jnF8NamDy0NDncKDizD8YX4rLbqt36iURxR/oIAbbwrtRn0192GyMA2HCNWXKvdPzGPj8hsudV3M5Ui3MeVXl/pdqc1/o/h2w1etMRJmPVsLxZJVGTOxAR6vJktRaoyd.cFG+EEe7NZzEuHzMBBdImIfYzcjRU8klA3zcmEbuWNiuHOPHmydjDGG6z670IlUeGuXMQx0+RmbnoiUjETD6/jBwr4kNxgwjyR/JE6ARZXXujYDCO0SMLNqgORydEjPl">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you for reaching out! I will get back to you soon!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
